# valorant-match-info

./: .gitignore  credentials.json.example  main.py  pyproject.toml  run.py
EcoRound/static/js/: map_plot.js
EcoRound/views/: kills.py
app/: ValorantAPI.py  main.py  translate.py  views.py
app/api/: ValorantAPI.py
app/kills/: views.py
app/static/css/: styles.css
app/views/: kills.py
ecoround/: __init__.py  utils.py
ecoround/api/: ValorantAPI.py
ecoround/models/: game.py  match.py
ecoround/scripts/: download.py  econanalyze.py  migrate.py
ecoround/static/js/: map_plot.js
ecoround/templates/: kills.html
ecoround/views/: kills.py  saveround.py
ecoround2/: __init__.py
src/: ValorantAPI.py  main.py
templates/: kills.html
