[tool.poetry]
name = "valorant-match-info"
version = "0.1.0"
description = ""
authors = ["Matt Bullock <mattabullock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.25.1"
black = "^20.8b1"
pydantic = "^1.7.3"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
